--- a/themes/ultrathread/assets/css/app.css
+++ b/themes/ultrathread/assets/css/app.css
@@ -429,7 +429,7 @@ a{
 }
 
 .post_link:hover{
-    color:#f2f2f2;
+    color:#010101;
     background-color: #f79824;
 }
 
@@ -438,4 +438,30 @@ a{
 /* custom-posts-archive styles */
 .ultrathread_event{
     margin-top:40px;
+}
+
+/*** STYLES FOR CUSTOM POST ArCHIVE PAGES ********************************/
+.event-content{
+    background-color:#f2f2f2;
+    padding: 20px;
+}
+/* single post custom page styles */
+.single-post{
+    background-color:#fff;
+    padding: 20px;
+    margin-bottom: 30px;
+}
+/* styles the links for the edit button */
+.edit-link a{
+    background-color:#2a752a;
+    color: white;
+    font-family: 'DM Serif Display', serif;
+    padding:8px;
+    font-size: medium;
+    width: 250px;
+}
+.edit-link a:hover{
+    background-color:#f79824;
+    color: black;
+    
 }
